--- a/src/app/inicio-admin/inicio-admin.component.css
+++ b/src/app/inicio-admin/inicio-admin.component.css
@@ -80,6 +80,27 @@ label {
     border-color: #fff;
 }
 
+.btn-primary {
+    background-color: rgb(252, 116, 5, 0.9);
+    border-color: rgb(252, 116, 5);
+}
+
+.btn-primary:not(:disabled):not(.disabled).active,
+.btn-primary:not(:disabled):not(.disabled):active,
+.show>.btn-primary.dropdown-toggle {
+    color: #fff;
+    background-color: rgb(252, 116, 5);
+    border-color: rgb(252, 116, 5);
+}
+
+.btn-outline-primary:not(:disabled):not(.disabled).active,
+.btn-outline-primary:not(:disabled):not(.disabled):active,
+.show>.btn-outline-primary.dropdown-toggle {
+    color: #fff;
+    background-color: rgb(252, 116, 5);
+    border-color: rgb(252, 116, 5);
+}
+
 @media(min-width:1440px) {
     .btn {
         margin-left: 100%;
