corrigiendo interfaces admin

--- a/src/app/consult-user-admin/consult-user-admin.component.html
+++ b/src/app/consult-user-admin/consult-user-admin.component.html
@@ -42,7 +42,7 @@
                     <td>{{ i.email }}</td>
                     <td>{{ i.telefono }}</td>
                     <td *ngIf="i.tipoUsuario=='A'">Admin</td>
-                    <td *ngIf="i.tipoUsuario=='I'">Instru</td>
+                    <td *ngIf="i.tipoUsuario=='I'">Instructor</td>
                     <td *ngIf="i.tipoUsuario=='G'">Guarda</td>
                     <td *ngIf="i.estado=='A'">Activo</td>
                     <td *ngIf="i.estado=='I'">Inactivo</td>
