--- a/src/app/consult-room-admin/consult-room-admin.component.html
+++ b/src/app/consult-room-admin/consult-room-admin.component.html
@@ -20,8 +20,8 @@
     </div><br>
     <div class="box">
         <h3 class="H2">Consultar Ambientes</h3><br>
-        <form [formGroup]="consultar" class="form-inline my-2 my-lg-0" (ngSubmit)="getAmbiente()">
-            <input formControlName="numero" class="form-control mr-sm-2" type="search" placeholder="12" aria-label="Search">
+        <form [formGroup]="consultar" class="form-inline my-2 my-lg-0 was-validated" (ngSubmit)="getAmbiente()">
+            <input formControlName="numero" class="form-control mr-sm-2" required type="search" placeholder="12" aria-label="Search">
             <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"><i class='fas fa-search' style='font-size:20px'></i></button>
         </form>
         <form [formGroup]="form">
