--- a/src/app/inicio-admin/inicio-admin.component.css
+++ b/src/app/inicio-admin/inicio-admin.component.css
@@ -76,8 +76,24 @@ label {
     margin-top: 3%;
     margin-block-end: 3%;
     margin-left: 40%;
-    background: rgb(252, 116, 5);
     border-color: #fff;
+    background: rgb(252, 116, 5);
+    display: inline-block;
+    font-weight: 400;
+    color: #212529;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: rgb(252, 116, 5) !important;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
 .btn-primary {
@@ -98,6 +114,17 @@ label {
 .show>.btn-outline-primary.dropdown-toggle {
     color: #fff;
     background-color: rgb(252, 116, 5);
+    border-color: rgb(252, 116, 5);
+}
+
+.btn-outline-primary:hover {
+    color: #fff;
+    background-color: rgb(252, 116, 5);
+    border-color: rgb(252, 116, 5);
+}
+
+.btn-outline-primary {
+    color: rgb(252, 116, 5);
     border-color: rgb(252, 116, 5);
 }
 
