--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,19 +11,16 @@
                             <img [src]="img_circle" /><br>
                             <h2><a>INICIO DE SESION</a></h2>
                         </div>
-                        <form [formGroup]="form" (ngSubmit)="onSubmit()" class="col-12" *ngIf="load">
+                        <form [formGroup]="form" (ngSubmit)="onSubmit()" class="col-12 was-validated" *ngIf="load">
                             <div class="form-group" id="user-group">
                                 <img [src]="img_identification" />
-                                <input formControlName="identification" type="text" class="form-control" placeholder="Identification" name="identification" />
+                                <input formControlName="identification" type="text" required class="form-control" placeholder="Identification" name="identification" />
                             </div>
                             <div class="form-group" id="contrasena-group">
                                 <img [src]="img_password" />
-                                <input formControlName="password" type="password" class="form-control password" placeholder="Password" name="password" />
+                                <input formControlName="password" type="password" required class="form-control password" placeholder="Password" name="password" />
                             </div>
-                            <div class="col-12 forgot" style="margin-left: 30px;">
-                                <a style="color:orangered" href="#">Olvide mi contraseña</a>
-                            </div>
-                            <button type="submit" class="btn btn-primary" style="background-color: orangered; border-color: orangered; color: black; margin-left: 30px;">Ingresar</button>
+                            <button type="submit" class="btn btn-primary" style=" color: black; margin-left: 30px;">Ingresar</button>
                         </form>
                     </div>
                 </div>
