--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -537,6 +537,9 @@
             background-color: rgb(252, 116, 5);
             border-color: rgb(252, 116, 5);
         }
+        .swal2-progress-steps .swal2-progress-step.swal2-active-progress-step {
+            background: rgb(252, 116, 5);
+        }
         .btn-outline-primary:hover {
             color: #fff;
             background-color: rgb(252, 116, 5);
