Todas los botones y formularios actualizados

--- a/src/app/consult-room-admin/consult-room-admin.component.css
+++ b/src/app/consult-room-admin/consult-room-admin.component.css
@@ -15,6 +15,11 @@
         background-color: rgb(252, 116, 5);
         border-color: rgb(252, 116, 5);
     }
+    .btn {
+        /* margin-top: 4%; */
+        margin-left: 5% !important;
+        margin-right: -3% !important;
+    }
     .container-fluid {
         min-height: calc(100vh);
         padding: 0%;
