--- a/src/app/consult-room-instru/consult-room-instru.component.css
+++ b/src/app/consult-room-instru/consult-room-instru.component.css
@@ -27,11 +27,30 @@
 
 .form-group {
     margin-left: -0%;
-    width: 370%;
+    width: 100%;
     height: 80%;
 }
 
 .form {
     float: left;
     margin-left: 15%;
+}
+
+.btn-outline-primary:hover {
+    color: #fff;
+    background-color: rgb(252, 116, 5);
+    border-color: rgb(252, 116, 5);
+}
+
+.btn-outline-primary {
+    color: rgb(252, 116, 5);
+    border-color: rgb(252, 116, 5);
+}
+
+.btn-outline-primary:not(:disabled):not(.disabled).active,
+.btn-outline-primary:not(:disabled):not(.disabled):active,
+.show>.btn-outline-primary.dropdown-toggle {
+    color: #fff;
+    background-color: rgb(252, 116, 5);
+    border-color: rgb(252, 116, 5);
 }
