--- a/src/app/pass-key-instru/pass-key-instru.component.html
+++ b/src/app/pass-key-instru/pass-key-instru.component.html
@@ -9,16 +9,16 @@
             </a>
     </div><br><br><br>
     <div class="id">
-        <form [formGroup]="form" class="form">
+        <form [formGroup]="form" class="form was-validated">
             <div class="form-group">
                 <label for="idinstru">Ingrese el id del instructor a entregar:</label>
-                <input formControlName="idInstru" type="text" class="form-control" id="idinstru" placeholder="11101210">
+                <input formControlName="idInstru" required type="text" class="form-control" id="idinstru" placeholder="11101210">
             </div>
             <div class="form-group">
                 <label for="ambiente">Ingrese el numero de ambiente que va rotar:</label>
-                <input formControlName="idAmbiente" type="text" class="form-control" id="ambiente" placeholder="12">
+                <input formControlName="idAmbiente" required type="text" class="form-control" id="ambiente" placeholder="12">
             </div>
-            <button (click)="onSubmit()" type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-sm">Pasar LLaves</button>
+            <button (click)="onSubmit()" type="button" class="btn btn-outline-primary">Pasar LLaves</button>
         </form>
     </div>
     <div class="spant">
