--- a/src/app/report-news-instru/report-news-instru.component.css
+++ b/src/app/report-news-instru/report-news-instru.component.css
@@ -1,7 +1,35 @@
 @media (min-width:1326px) {
-    .btn {
-        background: rgb(252, 116, 5);
-        border-color: #fff;
+    .container-fluid {
+        min-height: calc(100vh);
+        padding: 0%;
+        margin: 0%;
+    }
+    .btn-primary {
+        background-color: rgb(252, 116, 5, 0.9);
+        border-color: rgb(252, 116, 5);
+    }
+    .btn-primary:not(:disabled):not(.disabled).active,
+    .btn-primary:not(:disabled):not(.disabled):active,
+    .show>.btn-primary.dropdown-toggle {
+        color: #fff;
+        background-color: rgb(252, 116, 5);
+        border-color: rgb(252, 116, 5);
+    }
+    .btn-outline-primary:not(:disabled):not(.disabled).active,
+    .btn-outline-primary:not(:disabled):not(.disabled):active,
+    .show>.btn-outline-primary.dropdown-toggle {
+        color: #fff;
+        background-color: rgb(252, 116, 5);
+        border-color: rgb(252, 116, 5);
+    }
+    .btn-outline-primary:hover {
+        color: #fff;
+        background-color: rgb(252, 116, 5);
+        border-color: rgb(252, 116, 5);
+    }
+    .btn-outline-primary {
+        color: rgb(252, 116, 5);
+        border-color: rgb(252, 116, 5);
     }
     .form-control {
         margin-left: 40%;
