Se modificaron unas alertas de las novedades

--- a/src/app/inicio-admin/inicio-admin.component.html
+++ b/src/app/inicio-admin/inicio-admin.component.html
@@ -21,7 +21,7 @@
             <a>Hay nuevas novedades en los ambientes</a>
         </div>
         <div class="box-table">
-            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped tabled-bordered row-border hover">
+            <table id="htmlData" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped tabled-bordered row-border hover">
                 <thead>
                     <tr>
                         <th scope="col">Fecha</th>
