se corrigieron los errores ortograficos

--- a/src/app/consult-change-security-g/consult-change-security-g.component.html
+++ b/src/app/consult-change-security-g/consult-change-security-g.component.html
@@ -9,10 +9,10 @@
         </ul>
     </nav><br><br>
     <div class="block-info text-center" style="margin-left: 25%;margin-right: 10%;font-family: 'Times New Roman', Times, serif;">
-        <h1>Gestion de novedades</h1>
+        <h1>Gestión de novedades</h1>
         <hr><br>
-        <a>El modulo de gestion de novedades te permitira consultar las novedades con su respectiva fecha y ambiente para que se lleve un control de las mismas; 
-        <br>Se llevara un registro constante de las novedades registradas para salvaguardar los vienes de cada ambiente.</a>
+        <a>El módulo de gestión de novedades le permite consultar las novedades ya sea por fecha y/o por ambiente.
+        <br>Se llevará un registro constante de las novedades registradas para salvaguardar los bienes de cada ambiente. </a>
     </div><br><br><br>
     <div class="box">
         <h2 class="H2" style="text-align: center;">Historial de Novedades</h2><br>
@@ -23,7 +23,7 @@
                         <th scope="col">Fecha</th>
                         <th scope="col">Ambiente</th>
                         <th scope="col">Instructor</th>
-                        <th scope="col">Observacion</th>
+                        <th scope="col">Observación</th>
                         <th scope="col">Descripción</th>
                     </tr>
                 </thead>
