--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
         <nav class="row">
             <ul class="col-md-4 col-sm-12 list-unstyled">
                 <li class="font-weight-bold text-uppercase">
-                    <a>Desarrollado en Armenia Quindio (2020)</a></li>
+                    <a>Desarrollado en Armenia Quindío (2020)</a></li>
                 <a> enfocado al Servicio Nacional de Aprendizaje SENA</a>
             </ul>
             <div class="img">
