solucionando errores del angular.json

--- a/src/app/inicio-instru/inicio-instru.component.html
+++ b/src/app/inicio-instru/inicio-instru.component.html
@@ -36,8 +36,8 @@
                 Alert Room le permite rotar las llaves a otro instructor, este proceso solo se permitirá si tiene las llaves en posesión y solo le permitirá rotar las llaves del ambiente en el que se encuentre.
             </p><br>
         </div>
-        <div class="spant" style='width: -15px; height: 8px;'>
-            <img [src]="img_ini">
+        <div class="spant" style='width: -45px; '>
+            <img [src]="img_ini" style='width: -45px; height: 550px'>
         </div>
         <div style="clear: both;"></div>
     </div>
