--- a/src/app/inicio-security-g/inicio-security-g.component.html
+++ b/src/app/inicio-security-g/inicio-security-g.component.html
@@ -22,7 +22,7 @@
 
                             <div class="text-alert">
 
-                                <h4 class="alert-heading">No hay solicitudes de llaves en este momento </h4>
+                                <h4 class="alert-heading">No hay solicitudes de novedades en este momento </h4>
                             </div>
                         </div>
                         <div *ngFor="let i of novedades6" class="alert alert-warning" role="alert">
